--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "importOrder": ["^[w+]", "^[@]", "^[./]"],
+  "importOrderSeparation": true
 }
