--- a/package.json
+++ b/package.json
@@ -8,23 +8,30 @@
     "build": "rollup -c rollup.config.js",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "format": "yarn prettier --write .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-angular": "^12.1.4",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/html": "^6.2.9",
+    "@trivago/prettier-plugin-sort-imports": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.170",
     "@types/node": "15.12",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.0.2",
     "babel-preset-solid": "^0.26.5",
+    "husky": "^6.0.0",
     "jest": "^27.0.4",
     "react-app-polyfill": "^2.0.0",
     "rollup": "^2.51.2",
@@ -34,13 +41,14 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-node": "^10.0.0",
-    "twin.macro": "^2.4.2",
+    "twin.macro": "^2.5.0",
     "typescript": "4.3"
   },
   "dependencies": {
     "@emotion/css": "^11.1",
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/utils": "^1.0.0",
+    "lodash": "^4.17.21",
     "solid-js": "^0.26.5"
   },
   "peerDependencies": {
@@ -53,5 +61,8 @@
     "Safari 11",
     "Edge 17",
     "Node 10"
-  ]
+  ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md,json}": "prettier --write"
+  }
 }
