--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/utils": "^1.0.0",
     "lodash": "^4.17.21",
-    "solid-js": "^0.26.5"
+    "solid-js": "^1.0.0-rc.10"
   },
   "peerDependencies": {
     "@emotion/css": "^11.1",
-    "solid-js": "^0.26.5"
+    "solid-js": "^1.0.0-rc.10"
   },
   "browserslist": [
     "Chrome 74",
