--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@emotion/css": "^11.1",
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/utils": "^1.0.0",
+    "emotion-solid": "^1.0.0",
     "lodash": "^4.17.21",
     "solid-js": "^1.0.0"
   },
