--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-angular": "^12.1.4",
+    "@rollup/plugin-image": "^2.0.6",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
@@ -67,7 +68,7 @@
     "typescript": "4.3"
   },
   "dependencies": {
-    "@emotion/css": "^11.1",
+    "@emotion/css": "^11.1.3",
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/utils": "^1.0.0",
     "emotion-solid": "^1.1.1",
