--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@emotion/css": "^11.1.3",
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/utils": "^1.0.0",
+    "@launch/solid": "file:.yalc/@launch/solid",
     "emotion-solid": "^1.1.1",
     "lodash": "^4.17.21",
     "solid-js": "^1.0.0"
